Arreglo de logica para reservas